new style need some fix

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
   </div> 
 
 
-<section class="about" id="about">
+<!-- <section class="about" id="about">
 <div class="container" >
   <section class="about-section">
     <div class="content-wrapper">
@@ -104,7 +104,117 @@
     </div>
 </section>
 </div>
-</section>
+</section> -->
+
+
+  <section class="about" id="about">
+    <div class="container">
+      <section class="about-section">
+        <div class="content-wrapper">
+          <div class="person-image scroll-animate" id="person-image">
+            <img src="leqso 2 - Copy.png" alt="ხელმძღვანელი">
+          </div>
+
+          <div class="about-content scroll-animate" id="about-content">
+            <h2>მესხი 2000-ის ხელმძღვანელი და დამფუძნებელი</h2>
+            <div class="founder-name">ალექსი ყულჯანიშვილი</div>
+
+            <div class="company-description">
+              <p>
+                კომპანია ,,მესხი 2000" ბაზარზე 2000 წელს გამოჩნდა და დაარსების დღიდან აქტიურად ემსახურება მომხმარებელს. ჩვენი მიზანია დამკვეთის ერთგულების მოპოვება, ხარისხის კონტროლი, სიახლეების ათვისება და განვითარებისკენ მუდმივი სწრაფვა.
+              </p>
+            </div>
+
+            <div class="slogan">
+              "ინოვაცია და მაღალი ხარისხი ჩვენი მომხმარებლის კეთილგანწყობის საწინდარია."
+            </div>
+
+            <a href="#services" class="button scroll-animate">გაიგე მეტი</a>
+          </div>
+        </div>
+        <div class="scroll-animate" id="bigword-container">
+          <div class="bigword">
+            <p class="scroll-animate" id="bigword-text">ჩვენ ვართ კონცენტრირებული მხოლოდ მომხმარებლის კეთილგანწყობაზე, ამიტომაც ჩვენ გთავაზობთ უმაღლესი ხარისხის მომსახურეობას.</p>
+          </div>
+        </div>
+      </section>
+    </div>
+  </section>
+
+
+  <section class="services" id="services">
+    <div class="container">
+      <div class="scroll-animate" id="skills"> 
+        <section class="skills-section">
+          <h2 class="skills-title">Skills</h2>
+          <div class="skills-container">
+              <div class="skill-card scroll-animate" id="skill-1">
+                  <div class="skill-icon">
+                    <i class="fa-solid fa-industry"></i>
+                  </div>
+                  <h3 class="skill-subtitle">დამზადება</h3>
+                  <p class="skill-description">
+                    ვამზადეთ უმაღლესო ხარისხის საჭრისებ, ფრეზებს, ნებისმეირ კონფიგურაციის და მომსახურებოას ვეწევით ცირკული, ლენტური ხერხების, ფრეზების და PCD (ალმასის) ფრეზების გალესვაზე.
+                  </p>
+              </div>
+              <div class="skill-card scroll-animate" id="skill-2">
+                  <div class="skill-icon">
+                    <i class="fa-solid fa-boxes-stacked"></i>
+                  </div>
+                  <h3 class="skill-subtitle">ჩვენი პროდუქტი</h3>
+                  <p class="skill-description">
+                    ვამზადებთ ფრეზებს ნებისმიერ კომფიგურაციაზე.როგორც HSS ასევე "პაბედიტით".
+                  </p>
+              </div>
+              <div class="skill-card scroll-animate" id="skill-3">
+                  <div class="skill-icon">
+                    <i class="fa-solid fa-clock"></i>
+                  </div>
+                  <h3 class="skill-subtitle">სამუშოა დრო</h3>
+                  <p class="skill-description">
+                    ორშაბათი-შაბათი, დილის 9 საათიდან საღაოს 5 საათამდე.
+                  </p>
+              </div>
+              <div class="skill-card scroll-animate" id="skill-4">
+                  <div class="skill-icon">
+                      <i class="fas fa-hands-helping"></i>
+                  </div>
+                  <h3 class="skill-subtitle">ალესვები</h3>
+                  <p class="skill-description">
+                    ფრეზის პირების,ინოვაციური სიახლე. PCD (ალმასის) ფრეზების,ლენტური ხერების შედუღება და ალესვა,სტამბის დანების ფუგანების პირების,"კოპირი" ფრეზების ალესვა,ცირკული ხერხის პირების,ფუგანის პირების,ალუმინის,მეტალის და ხის დასამუშავებელი ცირკული ხერხები
+                  </p>
+              </div>
+              <div class="skill-card scroll-animate" id="skill-5">
+                <div class="skill-icon">
+                    <i class="fas fa-cogs"></i>
+                </div>
+                <h3 class="skill-subtitle">გამოჩარხვა</h3>
+                <p class="skill-description">
+                  ვჩარავთ ნებისმიერი ფრეზს და დანებს უმაღლეს ხარისხში საუკეთესო დანადგარებით.
+                </p>
+              </div>
+              <div class="skill-card scroll-animate" id="skill-6">
+                <div class="skill-icon">
+                    <i class="fas fa-drafting-compass"></i>
+                </div>
+                <h3 class="skill-subtitle">გრავირება</h3>
+                <p class="skill-description">
+                  ვაკეთებთ გრავირებას უმაღლესი ხარისხით უახლესი აპარატურით.
+                </p>
+              </div>
+          </div>
+        </section>
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+
+
+
 
 
 
