--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -434,6 +434,8 @@ a {
       max-width: 100%;
       height: auto;
       display: block;
+      opacity: 1;
+      background-color: red;
       transition: transform 0.5s ease;
       
       &:hover {
