new style and colors header fixed

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -112,7 +112,7 @@
       <section class="about-section">
         <div class="content-wrapper">
           <div class="person-image scroll-animate" id="person-image">
-            <img src="leqso 2 - Copy.png" alt="ხელმძღვანელი">
+            <img src="img/leqso 2 - Copy.png" alt="ხელმძღვანელი">
           </div>
 
           <div class="about-content scroll-animate" id="about-content">
