--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <div class="navbar-container">
-    <h1 class="navbar-logo">G-M-S</h1>
+    <img src="img/logo.png" alt="" >
     
     <button class="burger-menu" [class.active]="isMenuOpen" (click)="toggleMenu()" aria-label="Toggle menu">
       <span class="burger-line"></span>
