--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,7 +61,7 @@ $transition: all 0.4s cubic-bezier(0.16, 1, 0.3, 1);
 
 html, body {
     overflow-x: hidden;
-background-image: linear-gradient(to bottom, #051937, #00153a, #00103d, #00093e, #040024);
+background-image: linear-gradient(to right top, #1c1a37, #1e1f3d, #202543, #232a48, #25304e, #222f51, #1f2d53, #1b2c56, #132355, #0e1a53, #0d0f50, #11004c);
     scroll-behavior: smooth;
   }
 
