--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -81,7 +81,7 @@ border-radius: 10px;
     li {
       a {
         text-decoration: none;
-        color: #333;
+        color: #FAF6E9;
         font-weight: 500;
         padding: 0.5rem 1rem;
         border-radius: 4px;
