--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,33 @@
-<p>about works!</p>
+  <section class="about" id="about">
+    <div class="container">
+      <section class="about-section">
+        <div class="content-wrapper">
+          <div class="person-image scroll-animate" id="person-image">
+            <img src="img/leqso 2 - Copy.png" alt="ხელმძღვანელი">
+          </div>
+
+          <div class="about-content scroll-animate" id="about-content">
+            <h2>მესხი 2000-ის ხელმძღვანელი და დამფუძნებელი</h2>
+            <div class="founder-name">ალექსი ყულჯანიშვილი</div>
+
+            <div class="company-description">
+              <p>
+                კომპანია ,,მესხი 2000" ბაზარზე 2000 წელს გამოჩნდა და დაარსების დღიდან აქტიურად ემსახურება მომხმარებელს. ჩვენი მიზანია დამკვეთის ერთგულების მოპოვება, ხარისხის კონტროლი, სიახლეების ათვისება და განვითარებისკენ მუდმივი სწრაფვა.
+              </p>
+            </div>
+
+            <div class="slogan">
+              "ინოვაცია და მაღალი ხარისხი ჩვენი მომხმარებლის კეთილგანწყობის საწინდარია."
+            </div>
+
+            <a href="#services" class="button scroll-animate">გაიგე მეტი</a>
+          </div>
+        </div>
+        <div class="scroll-animate" id="bigword-container">
+          <div class="bigword">
+            <p class="scroll-animate" id="bigword-text">ჩვენ ვართ კონცენტრირებული მხოლოდ მომხმარებლის კეთილგანწყობაზე, ამიტომაც ჩვენ გთავაზობთ უმაღლესი ხარისხის მომსახურეობას.</p>
+          </div>
+        </div>
+      </section>
+    </div>
+  </section>
