--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -74,20 +74,7 @@
     </div>
   </section>
 
-  <div class="scroll-container">
-  <div class="scroll-wrapper" [ngStyle]="{ transform: 'translateX(' + translateX + 'px)' }">
-    <div
-      *ngFor="let item of duplicatedItems"
-      class="scroll-item"
-      [ngStyle]="item.style"
-      [innerHTML]="item.text">
-    </div>
-  </div>
-</div>
-
-
-
-
+<app-horizontal-slider></app-horizontal-slider>
 
 
 <!-- unda davamato boostrap da gamoviyeno image sliderze da aseve contact ze rom uketesad gamovides aseve dges rac axsna isac shegvidzlia gamoviyenot (ang11) -->
