add buttons and style

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,6 +22,7 @@
                   <p class="skill-description">
                     ვამზადეთ უმაღლესო ხარისხის საჭრისებ, ფრეზებს, ნებისმეირ კონფიგურაციის და მომსახურებოას ვეწევით ცირკული, ლენტური ხერხების, ფრეზების და PCD (ალმასის) ფრეზების გალესვაზე.
                   </p>
+                  <button class="more">გაიგეთ მეტი</button>
               </div>
               <div class="skill-card scroll-animate" id="skill-2">
                   <div class="skill-icon">
@@ -31,15 +32,17 @@
                   <p class="skill-description">
                     ვამზადებთ ფრეზებს ნებისმიერ კომფიგურაციაზე.როგორც HSS ასევე "პაბედიტით".
                   </p>
+                  <button class="more">გაიგეთ მეტი</button>
               </div>
               <div class="skill-card scroll-animate" id="skill-3">
                   <div class="skill-icon">
                     <i class="fa-solid fa-clock"></i>
                   </div>
-                  <h3 class="skill-subtitle">სამუშოა დრო</h3>
+                  <h3 class="skill-subtitle">ინოვაცია</h3>
                   <p class="skill-description">
-                    ორშაბათი-შაბათი, დილის 9 საათიდან საღაოს 5 საათამდე.
+                    ლამასი ხერხებისა და ფრეზების გალესვა.
                   </p>
+                  <button class="more">გაიგეთ მეტი</button>
               </div>
               <div class="skill-card scroll-animate" id="skill-4">
                   <div class="skill-icon">
@@ -49,6 +52,7 @@
                   <p class="skill-description">
                     ფრეზის პირების,ინოვაციური სიახლე. PCD (ალმასის) ფრეზების,ლენტური ხერების შედუღება და ალესვა,სტამბის დანების ფუგანების პირების,"კოპირი" ფრეზების ალესვა,ცირკული ხერხის პირების,ფუგანის პირების,ალუმინის,მეტალის და ხის დასამუშავებელი ცირკული ხერხები
                   </p>
+                  <button class="more">გაიგეთ მეტი</button>
               </div>
               <div class="skill-card scroll-animate" id="skill-5">
                 <div class="skill-icon">
@@ -58,6 +62,7 @@
                 <p class="skill-description">
                   ვჩარავთ ნებისმიერი ფრეზს და დანებს უმაღლეს ხარისხში საუკეთესო დანადგარებით.
                 </p>
+                <button class="more">გაიგეთ მეტი</button>
               </div>
               <div class="skill-card scroll-animate" id="skill-6">
                 <div class="skill-icon">
@@ -67,6 +72,7 @@
                 <p class="skill-description">
                   ვაკეთებთ გრავირებას უმაღლესი ხარისხით უახლესი აპარატურით.
                 </p>
+                <button class="more">გაიგეთ მეტი</button>
               </div>
           </div>
         </section>
