--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -90,3 +90,7 @@
 
 
 <!-- naxe mwvane bloknotshi chawerili meskhis info da gaecani da imis mixedvit unda imushao darchenili periodi -->
+
+
+
+<!-- dasamatebelia gilakemis moqmedebebi da aseve gverdebi aseve contact is stili da about shi kompaniis info -->
