--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -416,4 +416,4 @@ a {
 }
 
 
-// need better style and layout for the about page
+// need better style and layout for the about page new design in book 
