--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -391,29 +391,28 @@ a {
   }
   
 }
-
 // Print styles
-@media print {
-  body {
-    background: white;
-    color: black;
-  }
+// @media print {
+//   body {
+//     background: white;
+//     color: black;
+//   }
   
-  h1, h2, h3, h4, h5, h6 {
-    color: $gold-dark;
-  }
+//   h1, h2, h3, h4, h5, h6 {
+//     color: $gold-dark;
+//   }
   
   
-  .person-image:before, .person-image:after {
-    display: none;
-  }
+//   .person-image:before, .person-image:after {
+//     display: none;
+//   }
   
-  // Hide animations in print
-  * {
-    animation: none !important;
-    transition: none !important;
-  }
-}
+//   // Hide animations in print
+//   * {
+//     animation: none !important;
+//     transition: none !important;
+//   }
+// }
 
 
 // need better style and layout for the about page new design in book 
