new style glow ball

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,10 @@
     <p class="arrow-down">&#8595;</p>
   </div> 
 
-  
+  <div class="glow-ball1"></div>
+  <div class="glow-ball2"></div>
+  <div class="glow-ball3"></div>                
+  <div class="glow-ball4"></div>
   <section class="services" id="services">
     <div class="container">
       <div class="scroll-animate" id="skills"> 
@@ -34,6 +37,7 @@
                   </p>
                   <button class="more">გაიგეთ მეტი</button>
               </div>
+
               <div class="skill-card scroll-animate" id="skill-3">
                   <div class="skill-icon">
                     <i class="fa-solid fa-clock"></i>
@@ -80,7 +84,7 @@
     </div>
   </section>
 
-<app-horizontal-slider></app-horizontal-slider>
+<!-- <app-horizontal-slider></app-horizontal-slider> -->
 
 
 <!-- unda davamato boostrap da gamoviyeno image sliderze da aseve contact ze rom uketesad gamovides aseve dges rac axsna isac shegvidzlia gamoviyenot (ang11) -->
