--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,11 @@
 
 
     <p>"ჩვენ ვართ კონცენტრირებული მხოლოდ მომხმარებლის კეთილგანწყობაზე, ამიტომაც ჩვენ გთავაზობთ უმაღლესი ხარისხის მომსახურეობას."</p>
-    <p class="arrow-down">&#8595;</p>
+    <!-- <p class="arrow-down">&#8595;</p> -->
+     <div class="arrow-wrapper">
+  <p class="arrow-down">&#8595;</p>
+</div>
+
   </div> 
 
   <div class="glow-ball1"></div>
@@ -25,7 +29,7 @@
                   <p class="skill-description">
                     ვამზადეთ უმაღლესო ხარისხის საჭრისებ, ფრეზებს, ნებისმეირ კონფიგურაციის და მომსახურებოას ვეწევით ცირკული, ლენტური ხერხების, ფრეზების და PCD (ალმასის) ფრეზების გალესვაზე.
                   </p>
-                  <button class="more">გაიგეთ მეტი</button>
+                  <!-- <button class="more">გაიგეთ მეტი</button> -->
               </div>
               <div class="skill-card scroll-animate" id="skill-2">
                   <div class="skill-icon">
@@ -35,7 +39,7 @@
                   <p class="skill-description">
                     ვამზადებთ ფრეზებს ნებისმიერ კომფიგურაციაზე.როგორც HSS ასევე "პაბედიტით".
                   </p>
-                  <button class="more">გაიგეთ მეტი</button>
+                  <!-- <button class="more">გაიგეთ მეტი</button> -->
               </div>
 
               <div class="skill-card scroll-animate" id="skill-3">
@@ -46,7 +50,7 @@
                   <p class="skill-description">
                     ლამასი ხერხებისა და ფრეზების გალესვა.
                   </p>
-                  <button class="more">გაიგეთ მეტი</button>
+                  <!-- <button class="more">გაიგეთ მეტი</button> -->
               </div>
               <div class="skill-card scroll-animate" id="skill-4">
                   <div class="skill-icon">
@@ -56,7 +60,7 @@
                   <p class="skill-description">
                     ფრეზის პირების,ინოვაციური სიახლე. PCD (ალმასის) ფრეზების,ლენტური ხერების შედუღება და ალესვა,სტამბის დანების ფუგანების პირების,"კოპირი" ფრეზების ალესვა,ცირკული ხერხის პირების,ფუგანის პირების,ალუმინის,მეტალის და ხის დასამუშავებელი ცირკული ხერხები
                   </p>
-                  <button class="more">გაიგეთ მეტი</button>
+                  <!-- <button class="more">გაიგეთ მეტი</button> -->
               </div>
               <div class="skill-card scroll-animate" id="skill-5">
                 <div class="skill-icon">
@@ -66,7 +70,7 @@
                 <p class="skill-description">
                   ვჩარავთ ნებისმიერი ფრეზს და დანებს უმაღლეს ხარისხში საუკეთესო დანადგარებით.
                 </p>
-                <button class="more">გაიგეთ მეტი</button>
+                <!-- <button class="more">გაიგეთ მეტი</button> -->
               </div>
               <div class="skill-card scroll-animate" id="skill-6">
                 <div class="skill-icon">
@@ -76,7 +80,7 @@
                 <p class="skill-description">
                   ვაკეთებთ გრავირებას უმაღლესი ხარისხით უახლესი აპარატურით.
                 </p>
-                <button class="more">გაიგეთ მეტი</button>
+                <!-- <button class="more">გაიგეთ მეტი</button> -->
               </div>
           </div>
         </section>
@@ -98,3 +102,43 @@
 
 
 <!-- dasamatebelia gilakemis moqmedebebi da aseve gverdebi aseve contact is stili da about shi kompaniis info -->
+
+
+
+
+
+<div class="slider">
+<app-horizontal-slider [images]="firstSwiperImages"></app-horizontal-slider> <div class="text-block">
+    <p>
+      ფრეზის პირების, ინოვაციური სიახლე. <br />
+      PCD (ალმასის) ფრეზების, ლენტური ხერების შედუღება და ალესვა,<br />
+      სტამბის დანების, ფუგანების პირების,<br />
+      "კოპირი" ფრეზების ალესვა, ცირკული ხერხის პირების,<br />
+      ფუგანის პირების, ალუმინის, მეტალის და ხის დასამუშავებელი ცირკული ხერხები.
+    </p>
+  </div>
+</div>
+
+<div class="slider2"><div class="text-block">
+    <p>
+      ფრეზის პირების, ინოვაციური სიახლე. <br />
+      PCD (ალმასის) ფრეზების, ლენტური ხერების შედუღება და ალესვა,<br />
+      სტამბის დანების, ფუგანების პირების,<br />
+      "კოპირი" ფრეზების ალესვა, ცირკული ხერხის პირების,<br />
+      ფუგანის პირების, ალუმინის, მეტალის და ხის დასამუშავებელი ცირკული ხერხები.
+    </p>
+  </div>
+<app-horizontal-slider [images]="secondSwiperImages"></app-horizontal-slider> 
+</div>
+
+<div class="slider">
+<app-horizontal-slider [images]="thirdSwiperImages"></app-horizontal-slider> <div class="text-block">
+    <p>
+      ფრეზის პირების, ინოვაციური სიახლე. <br />
+      PCD (ალმასის) ფრეზების, ლენტური ხერების შედუღება და ალესვა,<br />
+      სტამბის დანების, ფუგანების პირების,<br />
+      "კოპირი" ფრეზების ალესვა, ცირკული ხერხის პირების,<br />
+      ფუგანის პირების, ალუმინის, მეტალის და ხის დასამუშავებელი ცირკული ხერხები.
+    </p>
+  </div>
+</div>
